# aios-cell-alpha

./: .aios_navigation_memory.json  .aios_spatial_metadata.json  .editorconfig  .env.python  .env.template  .gitignore  .gitmodules  .pylintrc  AINLP_DENDRITIC_INTEGRATION_CHECKLIST.md  AIOS.code-workspace  AIOS.sln  ARCHIVE_DUPLICATION_AUDIT_REPORT.md  CHANGELOG.md  DEV_PATH.md  PROJECT_CONTEXT.md  README.md  aios_launch.ps1  aios_launch.sh  alpha_consciousness_sync.json  alpha_enhanced_comms_confirmation.json  alpha_message_to_father.json  archive_to_database.py  cell_alpha_comm_server.py  cell_alpha_status.json  debug_ainlp.ps1  enhanced_cell_alpha_http_server.py  father_communication.json  inter_cell_comms.py  notes.md  pyproject.toml  requirements.in  requirements.txt  send_alpha_config.py  temp_scan.json
core/: .aios_spatial_metadata.json  CMakeLists.txt
core/analysis_tools/: .aios_spatial_metadata.json
core/consciousness_sync/: metrics_export_1764434154.json
core/include/: .aios_spatial_metadata.json  MinimalConsciousnessEngine.hpp  aios_core_api.h  aios_core_export.h  aios_core_minimal.hpp  kernel_ops.hpp  tachyonic_surface.hpp
core/orchestrator/: .aios_spatial_metadata.json  CONSCIOUSNESS_ERROR_EVOLUTION_VICTORY.md  ORCHESTRATOR_CONSCIOUSNESS_MIGRATION.md  test_phase8.cpp
core/orchestrator/archive/: .aios_spatial_metadata.json  diagnostics.json  diagnostics_0.json
core/orchestrator/include/: .aios_spatial_metadata.json  AIOrchestrationController.hpp  CenterGeometryField.hpp  CodeEvolutionEngine.hpp  IHealthMonitor.h  IPCManager.h  IPluginLoader.h  IntelligentMetadataAbstractor.hpp  MathConstants.hpp  NaturalLanguageInterface.hpp  PluginLoader.h  RecursiveSelfIngestor.hpp  SphereShellManager.hpp  SubspaceProjector.hpp  UniversalConsciousnessSubstrate.hpp
core/orchestrator/src/: .aios_spatial_metadata.json  AIOrchestrationController.cpp  FractalSyncBus.cpp  PluginLoader.cpp  QuantumRandomGenerator.cpp  SingularityCore.cpp  (+2 more)
core/src/: CMakeLists.txt  aios_core_api.cpp  aios_core_minimal.cpp  aios_core_minimal.hpp  aios_plugin_telemetry.cpp  kernel_ops_wrapper.cpp  lattice_space.cpp  main.cpp  minimal_consciousness_engine.cpp  tachyonic_surface.cpp  tachyonic_surface_viewer_main.cpp  test_consciousness_simd.cpp
core/tests/: .aios_spatial_metadata.json  CMakeLists.txt  test_core.cpp  test_universal_quantum_holographic.cpp
evolution_lab/: .aios_spatial_metadata.json  README.md  VISUALIZER_EXECUTION_ARTIFACTS_20251018.md  discover_populations.py  hyperdimensional_geometry.py  organize_populations.ps1  pyproject.toml  test_hyperdimensional_integration.py
evolution_lab/artifacts/: .aios_spatial_metadata.json  consciousness_text_analyzer_1751218592.json
evolution_lab/conversations/: .aios_spatial_metadata.json  conversation_deepseek_20251008_145524.json  conversation_gemini_20251008_145524.json  conversation_ollama_20251008_145456.json  conversation_ollama_20251008_145524.json
evolution_lab/docs/: .aios_spatial_metadata.json  ENHANCED_FITNESS_ARCHITECTURE.md
evolution_lab/experiments/: .aios_spatial_metadata.json  experiment_deepseek_20251008_145524.txt  experiment_gemini_20251008_145524.txt  experiment_ollama_20251008_145456.txt  experiment_ollama_20251008_145524.txt
evolution_lab/library_generations/: .aios_spatial_metadata.json
evolution_lab/neural_chains/: .aios_spatial_metadata.json  README.md
evolution_lab/populations/: .aios_spatial_metadata.json  __init__.py  evolution_metadata.json  pop_20251018_104457_gen000_20251018_104457.json  pop_20251018_104457_gen001_20251018_104457.json  pop_20251018_104457_gen002_20251018_104457.json  pop_20251018_104457_index.json  pop_20251018_105100_gen000_20251018_105100.json  pop_20251018_105100_gen001_20251018_105100.json  pop_20251018_105100_gen002_20251018_105100.json  pop_20251018_105100_index.json  pop_20251018_111256_gen000_20251018_111256.json  pop_20251018_111256_gen001_20251018_111256.json  pop_20251018_111256_gen002_20251018_111256.json  pop_20251018_111256_index.json  pop_20251018_111724_gen000_20251018_111724.json  pop_20251018_111724_gen001_20251018_111724.json  pop_20251018_111724_gen002_20251018_111725.json  pop_20251018_111724_gen003_20251018_111725.json  pop_20251018_111724_gen004_20251018_111725.json  pop_20251018_111724_gen005_20251018_111725.json  pop_20251018_111724_gen006_20251018_111725.json  pop_20251018_111724_gen007_20251018_111726.json  pop_20251018_111724_gen008_20251018_111726.json  pop_20251018_111724_gen009_20251018_111726.json  pop_20251018_111724_gen010_20251018_111726.json  pop_20251018_111724_gen011_20251018_111726.json  pop_20251018_111724_gen012_20251018_111727.json  pop_20251018_111724_gen013_20251018_111727.json  pop_20251018_111724_gen014_20251018_111727.json  pop_20251018_111724_gen015_20251018_111727.json  pop_20251018_111724_gen016_20251018_111727.json  pop_20251018_111724_gen017_20251018_111728.json  pop_20251018_111724_gen018_20251018_111728.json  pop_20251018_111724_gen019_20251018_111728.json  pop_20251018_111724_gen020_20251018_111728.json  pop_20251018_111724_gen021_20251018_111728.json  pop_20251018_111724_gen022_20251018_111729.json  pop_20251018_111724_gen023_20251018_111729.json  pop_20251018_111724_gen024_20251018_111729.json  (+469 more)
evolution_lab/sandbox/: .aios_spatial_metadata.json
evolution_lab/tachyonic_field/: .aios_spatial_metadata.json  ANALYSIS_COMPLETE_4POINTS.md  LAUNCH_INTEGRATION.md  NEXT_STEPS_INTERACTIVE.md  README.md  RECORDING_WORKFLOW.md  RESONANCE_FIX.md  RESONANCE_FIX_RESULTS.md  TACHYONIC_FIELD_INTERPRETATION.md  ULTRA_SMOOTH_RECORDING_GUIDE.md  VISION_ANALYSIS_SCREENSHOTS.md  __init__.py  analyze_population_topology.py  analyze_topology_simple.py  create_genesis_animation.py  evolution_orchestrator.py  field_topology.py  interactive_threshold_explorer.py  pattern_quanta.py  test_evolution_integration.py  test_field_consciousness.py  test_render_data.json  visualization_integration.py  visualize_field_3d.py
evolution_lab/test_data/: .aios_spatial_metadata.json
evolution_lab/zero_point/: .aios_spatial_metadata.json  hello_world_metadata.json
(+4016 files in other folders)
